syntax = "proto3";

package protoStruct;

// Regular message, that is sent on heartbeat
message agentstate {
    string token = 1; 
    string agentID = 2;
    string userID = 3;
    string productID = 4;
    int32 weight = 5;
    string stateExpires = 6;
}


// Request
message request {
    string agentID = 1;
}


// Setup message is sent by server to configure agent
message setup {
    string agentID = 1;
    string token = 2;
    string productID = 3;
    string userID = 4;
    int32 heartbeat = 5;
    string stateExpires = 6;
}
